# KinetiX

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  setup.py
.github/workflows/: test.yaml
benchmark/: CMakeLists.txt  install_bk.sh
benchmark/okl/: mech.okl  productionRates.okl  thermoCoeffs.okl  transportProps.okl
benchmark/src/: bk.cpp  kinetix.cpp  kinetix.hpp  nekRK.cpp  nekRK.hpp
ciData/: EtOHKonnov.final  EtOHKonnov.final.cantera  EtOHKonnov.ignition  EtOHKonnov.ignition.cantera  EtOHKonnov.initial  EtOHKonnov.initial.cantera  LiDryer.final.cantera  LiDryer.initial.cantera  generateCiData.ipynb
examples/: README.md  nekRK_NVIDIA_GPU_test_flags.sh  nekRK_NVIDIA_GPU_test_states.sh
examples/Cantera/: cantera_test.cpp
examples/Cantera/Cantera_standalone/: Makefile
examples/KinetiX/: Makefile  kinetix  kinetix_test.cpp  kinetix_test.hpp
examples/KinetiX/files/: rates.inc  viscosity.inc
examples/KinetiX/mechanisms/gri/: conductivity.cpp  diffusivity.cpp  enthalpy_RT.cpp  heat_capacity_R.cpp  mech.h
examples/PelePhysics/: Makefile  pele_test.cpp
examples/PelePhysics/Pele_standalone/: Makefile
examples/nekRK/nekRK_standalone/: Makefile  nekRK_sa.cpp
generator/: __main__.py  constants.py  generate.py  mechanism.py  mix_transport.py  reaction_rates.py  thermodynamics.py  utils.py
generator/core/: mechanism.py
generator/utils/: general_utils.py  write_utils.py
include/: _nekCRF.hpp  nekCRF.hpp
kinetix/: __main__.py  requirements.txt
kinetix/ci_data/: EtOHKonnov.ignition  EtOHKonnov.initial  LiDryer.final  LiDryer.ignition  LiDryer.ignition.cantera  LiDryer.initial  NH3Konnov_edit.final  NH3Konnov_edit.final.cantera  NH3Konnov_edit.ignition  NH3Konnov_edit.ignition.cantera  NH3Konnov_edit.initial  NH3Konnov_edit.initial.cantera  chempolimi_edit.final  chempolimi_edit.final.cantera  chempolimi_edit.ignition  chempolimi_edit.ignition.cantera  chempolimi_edit.initial  chempolimi_edit.initial.cantera  generateCIdata.ipynb  gri30.final  gri30.final.cantera  gri30.ignition  gri30.ignition.cantera  gri30.ignition.highP  gri30.ignition.highP.cantera  gri30.initial  gri30.initial.cantera
kinetix/core/: constants.py  generate.py  mechanism.py  mix_transport.py  reaction_rates.py  thermodynamics.py
kinetix/mechanisms/: H2_Konnov.yaml  LiDryer.yaml  NH3Konnov_edit.yaml  chempolimi_edit.yaml  gri30-35.yaml  gri30.yaml
kinetix/mechanisms/Pele/EtOHKonnov/: mechanism.cpp
kinetix/mechanisms/Pele/chempolimi_edit/: mechanism.H
kinetix/mechanisms/Pele/gri30/: mechanism.H
kinetix/mechanisms/Pele/original/EtOHKonnov/: mechanism.H  mechanism.yaml
kinetix/mechanisms/Pele/original/gri30/: mechanism.H
kinetix/utils/: write_utils.py
mechanisms/: H2_new_mech.yaml  Konnov.yaml  OXYMECH2.0Plus.yaml  gri30-20.yaml  gri30-27.yaml
mechanisms/Pele/LiDryer/: mechanism.H  mechanism.cpp
mechanisms/Pele/gri30/: mechanism.cpp
mechanisms/Pele/original/LiDryer/: mechanism.H
okl/: mech.okl  productionRates.okl  ref.okl  thermoCoeffs.okl  transport.okl  transportProps.okl
src/: ._nekCRF.cpp.swp  bk.cpp  nekCRF.cpp  nekRK.cpp  nekRK.hpp
tests/: nekRK_AMD_CPU_test_flags.sh  nekRK_AMD_CPU_test_states.sh  nekRK_AMD_GPU_test_flags.sh  nekRK_AMD_GPU_test_states.sh  nekRK_NVIDIA_GPU_test_flags.sh  nekRK_NVIDIA_GPU_test_states.sh
tests/Cantera/: cantera_test.cpp
tests/Cantera/Cantera_standalone/: cantera_test.cpp
tests/PelePhysics/: Makefile  pele_test.cpp
tests/PelePhysics/Pele_standalone/: pele_test.cpp
tests/nekRK/: nekRK_AMD_CPU_test.sh  nekRK_AMD_GPU_test.sh  nekRK_NVIDIA_GPU_test.sh  nekRK_test.submit
tests/nekRK/nekRK_standalone/: CPU_submit.nekrk_standalone  Makefile  main.c  nekRK.h  nekRK_sa.cpp  old_nekRK_sa.cpp
tools/: getStates.ipynb  reactions.py  reference.py
